[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Context_Ultra_Condensed.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Buttons/LCARSButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUIElements/SickbayRecord.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Context_Ultra_Condensed_Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_right = 20.0
bg_color = Color( 0.392157, 0.427451, 0.8, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=4]
content_margin_right = 20.0
bg_color = Color( 0.611765, 0.611765, 1, 1 )
corner_radius_top_left = 60
corner_radius_bottom_left = 60
corner_detail = 20

[sub_resource type="DynamicFont" id=5]
size = 26
use_filter = true
extra_spacing_top = 12
extra_spacing_char = 1
font_data = ExtResource( 1 )

[node name="SickbayRecord" type="HBoxContainer"]
margin_top = -0.0936432
margin_right = 320.0
margin_bottom = 49.9064
rect_min_size = Vector2( 320, 40 )
rect_clip_content = true
size_flags_vertical = 12
theme = SubResource( 2 )
custom_constants/separation = 8
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="ColorRect" parent="."]
margin_right = 50.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 50, 50 )
hint_tooltip = "Heals required to cure"
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 1, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Icon"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealsRemaining" type="Label" parent="Icon/CenterContainer"]
margin_left = 21.0
margin_top = 15.0
margin_right = 29.0
margin_bottom = 34.0
hint_tooltip = "Heals required to cure"
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"

[node name="Line2D" type="Line2D" parent="Icon"]
position = Vector2( -80.1756, -81.1693 )
scale = Vector2( 2.62866, 2.59048 )
points = PoolVector2Array( 49, 50, 152, 50 )
width = 1.0

[node name="CrewData" type="VBoxContainer" parent="."]
margin_left = 58.0
margin_right = 222.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = -1

[node name="CrewName" type="Label" parent="CrewData"]
margin_right = 164.0
margin_bottom = 19.0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Tasha Yarr"

[node name="CrewDiseaseName" type="Label" parent="CrewData"]
margin_top = 18.0
margin_right = 164.0
margin_bottom = 37.0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Oil Slick"

[node name="HealButton" parent="." instance=ExtResource( 2 )]
margin_left = 230.0
margin_right = 320.0
margin_bottom = 36.0
rect_min_size = Vector2( 90, 30 )
rect_clip_content = true
size_flags_vertical = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Heal"
color = 1
side = 1
[connection signal="pressed" from="HealButton" to="." method="_on_HealButton_pressed"]
